<resources>
    <string name="app_name">JetpackDemo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_btn_workmanager">WorkManager</string>
    <string name="str_btn_startwork">开始任务</string>
    <string name="str_tx_result">任务结果</string>
    <string name="navigation_view_header_text">联迪商用</string>
    <string name="text_fragment_title">News</string>
    <string name="list_fragment_title">List</string>
    <string name="pager_fragment_title">Pager</string>
    <string name="jetpack_fragment_title">Jetpack</string>
    <string name="btn_databinding">Databinding</string>
    <string name="btn_update_name">修改姓名</string>
    <string name="btn_update_age">+1</string>
    <string name="et_hint_name">输入姓名</string>
    <string name="btn_livedata">Livedata</string>
    <string name="btn_Lifecycle">Lifecycle</string>
</resources>